--- a/index.css
+++ b/index.css
@@ -1,3 +1,18 @@
+* {
+    font-family: Helvetica, Arial, sans-serif;
+    background-color: rgb(20, 25, 30);
+    color: rgb(230, 230, 240)
+}
+
 h1 {
-    color: orange;
+    color: rgb(159, 226, 191);
+    font-weight: 600;
+}
+
+h2 {
+    font-weight: 200;
+}
+
+a {
+    color: rgb(159, 226, 191);
 }
